hide the hire me and download cv

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,10 +62,10 @@
                 <h6 class="title">Suresh Kumar K S</h6>
                 <p>MERN FULLSTACK DEVELOPER</p>
 
-                <div class="buttons pt-3">
+                <!-- <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
                     <button class="btn btn-dark rounded">DOWNLOAD CV</button>
-                </div>      
+                </div>       -->
 
                 <div class="socials mt-4">
                     <a class="social-item" target="_blank" href="https://www.facebook.com/profile.php?id=100000932926466&mibextid=ZbWKwL"><i class="ti-facebook"></i></a>
