--- a/public_html/index.html
+++ b/public_html/index.html
@@ -244,7 +244,7 @@
     </section>
     <!-- End of Skills sections -->
 
-    <!-- Portfolio section 
+    <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
@@ -321,7 +321,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section> 
     <!-- End of portfolio section -->
 
     <!-- Testmonial Section -->
