--- a/public_html/index.html
+++ b/public_html/index.html
@@ -244,12 +244,12 @@
     </section>
     <!-- End of Skills sections -->
 
-    <!-- Portfolio section -->
+    <!-- Portfolio section 
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
             <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+           <!-- <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p> -->
 
             <div class="row">
                 <div class="col-sm-4">
@@ -257,8 +257,8 @@
                         <img src="assets/imgs/folio-1.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <h5>LinkeIn Clone</h5>
+                                <a href="https://sureshkumarks1.github.io/linkedin/" target="_blank"><i class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>  
                         </div>
@@ -321,7 +321,7 @@
             </div>
 
         </div>
-    </section> 
+    </section> -->
     <!-- End of portfolio section -->
 
     <!-- Testmonial Section -->
