--- a/public_html/index.html
+++ b/public_html/index.html
@@ -217,8 +217,75 @@
             <h6 class="subtitle">Skills</h6>
             <h6 class="section-title mb-4">My skills</h6>
             <!-- <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p> -->
-
-            <div class="row d-flex justify-content-center">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-html5"></i>
+                            <h5>HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-css3"></i>
+                            <h5>CSS</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-desktop"></i>
+                            <h5>JAVASCRIPT</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>JQUERY</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-crown"></i>
+                            <h5>NODE JS</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-desktop"></i>
+                            <h5>MONGO-DB</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-mobile"></i>
+                            <h5>REACT JS</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>BOOTSTRAP</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="row d-flex justify-content-center">
                 <div class="col-sm-6 col-md-4 mb-6 text-center">
                     <ul class="list-unstyled">
                         <li>In-depth knowledge of NodeJS, ExpressJS</li>
@@ -239,7 +306,7 @@
                     
                     </ul>
                 </div>
-            </div>  
+            </div>   -->
         </div>
     </section>
     <!-- End of Skills sections -->
