--- a/public_html/index.html
+++ b/public_html/index.html
@@ -284,6 +284,38 @@
                         </div>
                     </div>
                 </div>
+		     <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>TYPESCRIPT</h5>
+                        </div>
+                    </div>
+                </div>
+		 <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>SCSS</h5>
+                        </div>
+                    </div>
+                </div>
+		 <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>MYSQL</h5>
+                        </div>
+                    </div>
+		 <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>NEXT JS</h5>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
             <!-- <div class="row d-flex justify-content-center">
                 <div class="col-sm-6 col-md-4 mb-6 text-center">
