--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="suresh kumar k s">
     <title>Portfolio-Suresh kumar k s</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="public_html/assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
 	<link rel="stylesheet" href="assets/css/steller.css">
     <link rel="icon" type="image/x-icon" href="https://d2wrmxwbzo7zm.cloudfront.net/img/career-details/dev_1/Group%202290.svg">
@@ -76,7 +76,7 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/man.svg" alt="">
+                <img src="public_html/assets/imgs/man.svg" alt="">
             </div>      
         </div>  
 
@@ -307,14 +307,14 @@
                             <h5>MYSQL</h5>
                         </div>
                     </div>
-		 <div class="col-sm-6 col-md-3 mb-4">
+<!-- 		 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
                             <h5>NEXT JS</h5>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 </div>
             </div>
             <!-- <div class="row d-flex justify-content-center">
